Se arreglaron problemas con los DateTime